# ccm_benchmate

./: .env_example  .gitignore  Dockerfile  README.md  environment.yaml  install_benchmate.sh  pyproject.toml  pytest.ini  pytest.ini.bak  requirements.txt  setup.py
benchmate/: config.py  config.yaml
benchmate/alignment/: alignment.py  blast.py  folddisco.py  foldseek.py  mmseqs.py  utils.py
benchmate/apis/: alphagenome.py  biogrid.py  ebi.py  ensembl.py  intact.py  ncbi.py  ols.py  others.py  reactome.py  rnacentral.py  stringdb.py  uniprot.py  utils.py
benchmate/container_runner/: README.md  container_runner.py
benchmate/genome/: genome.py  tables.py  utils.py
benchmate/inference/: inference.py  utils.py
benchmate/knowledge_base/: knowledge_base.py  tables.py
benchmate/literature/: configs.py  literature.py  paper_processor.py  paper_processor_utils.py  paperinfo.py  query_builder.py  utils.py
benchmate/molecule/: molecule.py  utils.py
benchmate/project/: project.py  search.py  utils.py
benchmate/ranges/: genomicranges.py  ranges.py
benchmate/sequence/: sequence.py  utils.py
benchmate/structure/: new_tester.ipynb  sqlalchemy_connection.ipynb  structure.py  utils.py
benchmate/utils/: general_utils.py
benchmate/variant/: utils.py  variant.py
containerization/: benchmate-run.sh  benchmate.sh
containerization/docker/: Dockerfile.base  Dockerfile.db-cpu  Dockerfile.gpu-nodb  environment.cpu.yaml  requirements.base.txt  requirements.db-cpu.txt  requirements.gpu-nodb.txt
docs/: _config.yaml  apis.md  contributing.md  index.md  installation.md  knowledgebase.md  literature.md  molecule.md  project.md  sequence.md  usage.md  variant.md
docs/api_ref/: apis_ref.md  genome_ref.md  index.md  lit_ref.md  mol_ref.md  ranges_ref.md  seq_ref.md  str_ref.md  var_ref.md
docs/api_ref/reference/: alignment.md  apis_ref.md  genome_ref.md  lit_ref.md  mol_ref.md  ranges_ref.md  seq_ref.md  str_ref.md  var_ref.md
docs/containerization/: CONTAINER_OVERVIEW.md  CONTAINER_USAGE.md  DOCKER_IMAGE.md  DOCKER_VARIANTS.md  LAUNCHER_USAGE.md
docs/literature/: index.md  lit_search.md  paper.md  paper_processor.md
docs/modules/: alignment.md  containerrunner.md  genome.md  index.md  molecule.md  ranges.md  sequence.md  structure.md  variant.md
docs/modules/APIs/: index.md
docs/modules/apis/: alphagenome.md  apicall.md  biogrid.md  ebi_tools.md  ensembl.md  index.md  intact.md  ncbi.md  ols.md  reactome.md  rnacentral.md  stringdb.md  uniprot.md
docs/modules/literature/: index.md  lit_search.md  paper.md  paper_processor.md
docs/under_construction/: containers.md  index.md  knowledgebase.md  project.md
notebooks/: apis_part1.ipynb  apis_part2.ipynb  genome.ipynb  literatue.ipynb
tests/: test_apis.py  test_genome.py  test_molecule.py  test_ranges.py  test_variant.py
tests/test_data/smiles/: 0000-1000.smi
